# git_BT_backup_tools

./: LICENSE  README.md  diff.py  pretty_print.py  pyproject.toml  requirements.txt  restore_fastresumes.bash  setup.cfg  setup.py
git_bt_backup_tools/: configure_git.py  pretty_print.py
