[tool.poetry]
name = "git_bt_backup_tools"
version = "0.1.0"
description = ""
authors = ["Smitten <77771103+C84186@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
