[tool.poetry]
name = "git-bt-backup-tools"
version = "0.2.0.9007"
description = ""
authors = ["Smitten <77771103+C84186@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"bencode.py" = "^4.0.0"
PyYAML = "^5.4.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cat_bencode = 'git_bt_backup_tools.pretty_print:pretty_print_bencoded'
cat_bencode2 = 'git_bt_backup_tools.pretty_print:pretty_print_bencoded_fun'
git_bt_tools_setup = 'git_bt_backup_tools.configure_git:setup_config'
