[metadata]
name = pretty_print_bencoded
version = 0.0.0.9001

[options]
packages = pretty_print_bencoded
include_package_data = True
install_requires =
  Click
  requests
  importlib; python_version >= 3.7

[options.entry_points]
console_scripts =
  bencode2yaml = pretty_print:pretty_print_bencoded 
