[metadata]
name = pretty_print_bencoded
version = 0.0.0.9001

[options]
packages = find:
include_package_data = True
install_requires =
  Click
  bencode.py
  pyyaml
  zlib 
  importlib; python_version >= 3.7

[options.entry_points]
console_scripts =
  bencode2yaml = pretty_print:pretty_print_bencoded 
